--- a/css/estilos.css
+++ b/css/estilos.css
@@ -72,3 +72,42 @@ body{
 }
 
 /* 2 SERVICIO */
+.subtitulo{
+    color:#9f8ad0;
+    text-align: center;
+    font-weight: 300;
+    margin-bottom: 30px;
+    font-size: 40px;
+}
+.contenedor-servicio{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.contenedor-servicio img{
+    width: 40%;
+}
+.checklist-servicio{
+    width: 45%;
+}
+.service{
+    margin-bottom: 20px;    
+
+}
+.n-service{
+    margin-bottom: 7px;
+    color:#9f8ad0;
+}
+.number{
+    display: inline-block;
+    background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    color: #fff;
+    border-radius: 50%;
+    margin-right: 5px;
+    font-weight: 700;
+}
